fixed nav link text alignment

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -110,3 +110,7 @@ a.button-link {
     border-radius:5px; 
     text-decoration: none;
 }
+
+.nav-link {
+    text-align: left;
+}
